@@ -114,12 +114,8 @@ static qboolean S_TIMIDITY_CodecInitialize (void)
 	if (err != 0)
 		err = TIMIDITY_InitHelper(fs_basedir);
 	/* lastly, check with the system locations: */
-	i = 0;
-	while (err != 0 && cfgfile[i] != NULL)
-	{
+	for (i = 0; err != 0 && cfgfile[i] != NULL; ++i)
 		err = TIMIDITY_InitHelper(cfgfile[i]);
-		++i;
-	}
  _finish:
 	if (err != 0)
 	{
